@@ -410,7 +410,8 @@ struct vki_sigcontext {
 
 #define VKI_SIOCSPGRP       0x8902
 #define VKI_SIOCGPGRP       0x8904
-#define VKI_SIOCGSTAMP      0x8906          /* Get stamp */
+#define VKI_SIOCGSTAMP      0x8906          /* Get stamp (timeval) */
+#define VKI_SIOCGSTAMPNS    0x8907          /* Get stamp (timespec) */
 
 //----------------------------------------------------------------------
 // From linux-2.6.13/include/asm-ppc64/stat.h
